# pinocchio-guide

./: Cargo.toml  GUIDE.md  README.md  TUTORIAL.md
examples/: CHECKLIST.md
examples/programs/src/: lib.rs
examples/programs/src/system/: advance_nonce_account.rs  allocate.rs  allocate_with_seed.rs  assign.rs  assign_with_seed.rs  authorize_nonce_account.rs  create_account.rs  create_account_with_seed.rs  initialize_nonce_account.rs  mod.rs  transfer_lamports.rs  transfer_with_seed.rs  update_nonce_account.rs  withdraw_nonce_account.rs
examples/programs/src/token/: approve.rs  approve_checked.rs  burn.rs  burn_checked.rs  close_account.rs  freeze_account.rs  initialize_account.rs  initialize_mint.rs  mint_to.rs  mint_to_checked.rs  mod.rs  revoke.rs  set_authority.rs  sync_native.rs  thaw_account.rs  transfer_checked.rs  transfer_tokens.rs
programs/: Cargo.toml
programs/src/: advance_nonce_account.rs  close_account.rs  lib.rs  mint_to.rs  mint_to_checked.rs  revoke.rs
programs/src/system/: allocate.rs  allocate_with_seed.rs  assign.rs  assign_with_seed.rs  authorize_nonce_account.rs  create_account.rs  create_account_with_seed.rs  initialize_nonce_account.rs  transfer.rs  transfer_lamports.rs  transfer_with_seed.rs  update_nonce_account.rs  withdraw_nonce_account.rs
programs/src/token/: approve.rs  approve_checked.rs  burn.rs  burn_checked.rs  close_account.rs  freeze_account.rs  initialize_account.rs  mod.rs  revoke.rs  set_authority.rs  sync_native.rs  thaw_account.rs  transfer.rs  transfer_checked.rs  transfer_tokens.rs
