[workspace]
resolver = "2"
members = ["programs"]
exclude = []

[workspace.package]
authors = ["Pinocchio Guide"]
repository = "https://github.com/vict0rcarvalh0/pinocchio-guide"

[workspace.dependencies]
pinocchio = { git = "https://github.com/febo/pinocchio.git" }
pinocchio-pubkey = { git = "https://github.com/febo/pinocchio.git" }
pinocchio-system = { git = "https://github.com/febo/pinocchio.git" }
pinocchio-token = { git = "https://github.com/febo/pinocchio.git" }
five8_const = "0.1.3"
spl-token = "6.0.0"
solana-sdk = "2.0.8"
solana-program = "2.0.8"
mollusk-svm = { git = "https://github.com/deanmlittle/mollusk" }
mollusk-token = { git = "https://github.com/deanmlittle/mollusk" }