[package]
name = "programs"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]

[features]
advance_nonce_account = []
approve = []
approve_checked = []
burn = []
burn_checked = []
transfer = []
close_account = []
initialize_account = []

[dependencies]
pinocchio = { git = "https://github.com/febo/pinocchio.git" }
pinocchio-pubkey = { git = "https://github.com/febo/pinocchio.git" }
pinocchio-system = { git = "https://github.com/febo/pinocchio.git" }
pinocchio-token = { git = "https://github.com/febo/pinocchio.git" }
five8_const = "0.1.3"
spl-token = "6.0.0"

[dev-dependencies]
solana-sdk = "2.0.8"
solana-program = "2.0.8"
mollusk-svm = { path = "../../mollusk/harness" }
mollusk-token = { path = "../../mollusk/programs/token" }
# mollusk-svm = { git = "https://github.com/deanmlittle/mollusk" }
# mollusk-token = { git = "https://github.com/deanmlittle/mollusk" }
spl-token = "6.0.0"