[package]
name = "programs"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]

[features]
advance_nonce_account = []
approve = []
approve_checked = []
burn = []
burn_checked = []
transfer = []
close_account = []
freeze_account = []
initialize_account = []
mint_to = []
mint_to_checked = []
revoke = []

[dependencies]
pinocchio = { workspace = true }
pinocchio-pubkey = { workspace = true }
pinocchio-system = { workspace = true }
pinocchio-token = { workspace = true }
five8_const = { workspace = true }
spl-token = { workspace = true }

[dev-dependencies]
solana-sdk = { workspace = true }
solana-program = { workspace = true }
mollusk-svm = { workspace = true }
mollusk-token = { workspace = true }
# mollusk-svm = { git = "https://github.com/deanmlittle/mollusk" }
# mollusk-token = { git = "https://github.com/deanmlittle/mollusk" }
spl-token = { workspace = true }